--- a/package.json
+++ b/package.json
@@ -4,20 +4,21 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "set NODE_ENV=development&&vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "start": "node"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.1",
-    "axios": "^1.2.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@types/node": "^20.8.10",
+    "axios": "^1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.4.4",
-    "redux": "^4.2.0",
+    "react-router-dom": "^6.18.0",
+    "redux": "^4.2.1",
     "redux-saga": "^1.2.1",
     "tsc": "^2.0.4",
     "typesafe-actions": "^5.1.0"
@@ -25,7 +26,7 @@
   "devDependencies": {
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
-    "@types/react-redux": "^7.1.24",
+    "@types/react-redux": "^7.1.29",
     "@types/redux-saga": "^0.10.5",
     "@vitejs/plugin-react": "^2.2.0",
     "typescript": "^4.6.4",
